Rezolvat probleme raportate de SonarQube în AbstractRepository